--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,12 +1,8 @@
 .about {
-  flex: 1 1 auto;
   position: relative;
-  overflow: hidden;
-  padding: 150px 0;
+  min-height: 90vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  min-height: 60vh;
 }
 
 .about::after {
@@ -24,10 +20,11 @@
 }
 
 .about__about-me-container {
-  margin: 0 auto 60px;
+  margin: 100px auto;
   opacity: 0.4;
-  background-color: #50fff9;
   padding: 4px 8px;
+  width: fit-content;
+  background-color: #50fff9;
 }
 
 .about__about-me {
@@ -37,11 +34,10 @@
 .about__container {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
-  max-width: 1200px;
-  margin: 0 40px;
-  width: 100%;
+  margin: 0 auto 60px;
   position: relative;
+  max-width: 1280px;
+  padding: 0 40px;
 }
 
 .about__image-container {
@@ -59,7 +55,7 @@
 .about__text-container::before {
   content: "";
   position: absolute;
-  top: 0%;
+  top: -10%;
   left: 40%;
   clip-path: polygon(
     20% 0%,
@@ -84,7 +80,7 @@
 .about__circle {
   content: "";
   position: absolute;
-  bottom: -10%;
+  bottom: -5%;
   right: 5%;
   border: 8px solid #deff50;
   border-radius: 50%;
@@ -104,9 +100,6 @@
   text-align: justify;
 }
 
-.about__main-text {
-}
-
 .about__triangle-container {
   position: absolute;
   top: 45%;
@@ -119,8 +112,8 @@
 }
 
 .about__triangle {
-  width: 250px;
-  height: 250px;
+  width: 240px;
+  height: 240px;
   position: relative;
   border-top: 6px solid #ff50d5;
   opacity: 0.2;
@@ -129,7 +122,7 @@
 .about__inner-triangle {
   position: absolute;
   margin: auto;
-  top: -92px;
+  top: -89px;
   left: 0;
   right: 0;
   width: 173px;
