--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,24 +1,19 @@
 .navbar {
   background-color: #ffc450;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  display: flex;
-  justify-content: center;
 }
 
 .navbar__container {
+  margin: 0 auto;
   display: flex;
-  font-weight: 600;
-  font-size: 24px;
-  justify-content: space-between;
-  max-width: 1200px;
-  margin: 0 40px;
-  width: 100%;
-  padding: 20px 0;
+  max-width: 1280px;
+  min-height: 80px;
+  padding: 0 40px;
 }
 
 .navbar__logo-container {
   display: flex;
-  gap: 12px;
+  align-items: center;
 }
 
 .navbar__logo {
@@ -26,8 +21,10 @@
 }
 
 .navbar__menu-container {
+  flex: 1 1 auto;
   display: flex;
   align-items: center;
+  justify-content: flex-end;
 }
 
 .navbar__menu {
@@ -39,10 +36,28 @@
 }
 
 .navbar__menu-item {
-  padding: 5px;
-  vertical-align: bottom;
 }
 
-.navbar__menu-item:hover {
-  box-shadow: 0 2px 0 0 #8752ff;
+.navbar__menu-link {
+  text-decoration: none;
+  color: #000;
+  opacity: 0.5;
+}
+
+.navbar__menu-link-active {
+  text-decoration: none;
+  position: relative;
+  color: #000;
+  opacity: 1;
+  font-weight: 600;
+}
+
+.navbar__menu-link-active::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  background-color: #333;
+  bottom: -10px;
+  left: 0;
 }
