--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -6,21 +6,21 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  min-height: 60vh;
   /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
-    rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+  /* box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
+    rgba(0, 0, 0, 0.06) 0px 0px 0px 1px; */
+  min-height: 91.5vh;
 }
 
 .portfolio__header-container {
-  margin: 60px auto 0;
+  margin: 100px auto;
   text-transform: uppercase;
   opacity: 0.65;
   background-color: #8752ff;
   color: #fff;
   padding: 4px 8px;
-  margin-bottom: 60px;
-  max-width: 100%;
+  text-align: center;
+  width: fit-content;
 }
 
 .portfolio__header {
