--- a/src/components/EmailForm.css
+++ b/src/components/EmailForm.css
@@ -4,6 +4,10 @@
   flex-direction: column;
   max-width: 400px;
   width: 100%;
+  background-color: rgba(255, 255, 255, 0.303);
+  backdrop-filter: blur(5px);
+  border-radius: 8px;
+  padding: 30px 40px;
 }
 
 .email-form__name-label,
