--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,7 @@
 .navbar {
-  background-color: #ffc450;
+  background-color: #8752ff;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  z-index: 3;
 }
 
 .navbar__container {
@@ -17,6 +18,7 @@
 }
 
 .navbar__logo {
+  color: #ffb82b;
   font-size: 48px;
 }
 
@@ -40,14 +42,14 @@
 
 .navbar__menu-link {
   text-decoration: none;
-  color: #000;
+  color: #fff;
   opacity: 0.5;
 }
 
 .navbar__menu-link-active {
   text-decoration: none;
   position: relative;
-  color: #000;
+  color: #fff;
   opacity: 1;
   font-weight: 600;
 }
@@ -57,7 +59,7 @@
   position: absolute;
   width: 100%;
   height: 4px;
-  background-color: #333;
+  background-color: #ffb82b;
   bottom: -10px;
   left: 0;
 }
