--- a/src/components/ProjectCard.css
+++ b/src/components/ProjectCard.css
@@ -4,18 +4,17 @@
 
 .project-card__container {
   display: flex;
-  justify-content: space-between;
-  border-radius: 4px;
+  border-radius: 8px;
+  justify-content: center;
   margin: 0 40px;
-  gap: 170px;
-  padding: 60px 90px;
-  background-color: #fff;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  max-width: 90%;
+  gap: 40px;
+  padding: 30px 40px;
+  background-color: rgb(255 253 192 / 29%);
+  box-shadow: rgb(255 254 254 / 24%) 0px 3px 8px;
 }
 
 .project-card__screenshot-container {
-  max-width: 400px;
+  max-width: 450px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
@@ -24,5 +23,36 @@
 }
 
 .project-card__text-container {
+  text-align: left;
   flex: 1 1 auto;
+  padding: 0 40px;
+}
+
+.project-card__title-container {
+  margin-bottom: 12px;
+}
+
+.project-card__title {
+  font-size: 28px;
+  font-weight: 600;
+  letter-spacing: 1px;
+}
+
+.project-card__tools-container {
+  margin-bottom: 10px;
+}
+
+.project-card__tools {
+  font-weight: 600;
+  font-size: 20px;
+}
+
+.project-card__tool {
+  font-weight: 400;
+  font-size: 20px;
+}
+
+.project-card___description {
+  font-weight: 400;
+  font-size: 20px;
 }
