--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -6,14 +6,21 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
-  /* box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
-    rgba(0, 0, 0, 0.06) 0px 0px 0px 1px; */
-  min-height: 91vh;
+}
+
+.portfolio__top {
+  flex: 1 1 200px;
+  display: flex;
+  align-items: center;
+}
+
+@media screen and (max-width: 575px) {
+  .portfolio__top {
+    flex: 1 1 100px;
+  }
 }
 
 .portfolio__header-container {
-  margin: 100px auto;
   text-transform: uppercase;
   opacity: 0.8;
   background-color: #8752ff;
@@ -27,13 +34,16 @@
 }
 
 .portfolio__container {
-  max-width: 1250px;
+  max-width: 1280px;
   padding: 0 40px;
-  margin: 0 40px;
   width: 100%;
+  flex: 1 1 auto;
 }
 
-.portfolio__slider-container {
+@media screen and (max-width: 989px) {
+  .portfolio__container {
+    padding: 0;
+  }
 }
 
 .portfolio__projects-list {
