--- a/src/components/Contacts.css
+++ b/src/components/Contacts.css
@@ -2,7 +2,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  min-height: 91vh;
+  flex: 1 1 auto;
 }
 
 .contacts::after {
@@ -40,8 +40,20 @@
   opacity: 0.1;
 }
 
+.contacts__top {
+  flex: 0 1 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (max-width: 575px) {
+  .contacts__top {
+    flex: 0 1 100px;
+  }
+}
+
 .contacts__header-container {
-  margin: 100px auto 20px;
   opacity: 0.7;
   padding: 4px 8px;
   width: fit-content;
@@ -60,7 +72,7 @@
 
 .contacts__email-container {
   display: flex;
-  margin: 60px auto;
+  margin: 0 auto;
   position: relative;
   max-width: 500px;
   z-index: 2;
