Portfolio CSS Fix

--- a/src/components/ProjectCard.css
+++ b/src/components/ProjectCard.css
@@ -1,5 +1,4 @@
 .project-card {
-  padding: 10px;
 }
 
 .project-card__container {
@@ -9,7 +8,7 @@
   margin: 0 40px;
   gap: 40px;
   padding: 30px 40px;
-  background-color: rgb(255 253 192 / 29%);
+  background-color: rgba(255, 255, 255, 0.6);
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
@@ -23,7 +22,10 @@
 
 @media screen and (max-width: 575px) {
   .project-card__container {
-    margin: 0 20px;
+    margin: 0 24px;
+    padding: 10px;
+    box-shadow: none;
+    background-color: transparent;
   }
 }
 
