--- a/src/components/EmailForm.css
+++ b/src/components/EmailForm.css
@@ -19,7 +19,8 @@
   border-radius: 4px;
   border: 3px solid #ffc450;
   outline-color: #ffaa00;
-  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  outline: none;
+  background-color: rgba(255, 255, 255, 0.4);
 }
 
 .email-form__message-input {
