--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -32,7 +32,9 @@
 .navbar__menu-container {
   flex: 1 1 auto;
   display: flex;
+  display: -webkit-flex;
   align-items: center;
+  -webkit-align-items: center;
   justify-content: flex-end;
 }
 
