--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -8,12 +8,12 @@
 
 .modal__modal-container {
   position: relative;
-  top: 50%;
+  top: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
   max-width: 500px;
   width: 100%;
-  height: 300px;
+  height: 260px;
   background-color: rgb(255, 255, 255);
   border-radius: 8px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
@@ -22,20 +22,28 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  font-weight: 500;
 }
 
 .modal__icon {
   margin-left: 10px;
+  color: #ffc450;
 }
 
 .modal__first-line-container {
   margin-bottom: 20px;
-  font-size: 24px;
+  font-size: 22px;
+  background-color: #8752ff;
+  color: #fff;
+  padding: 4px 8px;
 }
 
 .modal__second-line-container {
-  margin-bottom: 60px;
-  font-size: 24px;
+  margin-bottom: 55px;
+  font-size: 22px;
+  background-color: #ffc450;
+  color: #8752ff;
+  padding: 4px 8px;
 }
 
 .modal__button-container {
@@ -47,6 +55,7 @@
   background-color: #02db38;
   padding: 10px 40px;
   border-radius: 4px;
+  color: #fff;
 }
 
 .modal__button:hover {
