--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -8,7 +8,7 @@
 
 .modal__modal-container {
   position: relative;
-  top: 30%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
   max-width: 500px;
@@ -25,6 +25,14 @@
   font-weight: 500;
 }
 
+.modal__close-button {
+  position: absolute;
+  right: 25px;
+  top: 15px;
+  font-size: 24px;
+  cursor: pointer;
+}
+
 .modal__icon {
   margin-left: 10px;
   color: #ffc450;
@@ -39,16 +47,22 @@
 }
 
 .modal__second-line-container {
-  margin-bottom: 55px;
+  margin-bottom: 45px;
   font-size: 22px;
   background-color: #ffc450;
   color: #8752ff;
   padding: 4px 8px;
 }
 
+@media screen and (max-width: 360px) {
+  .modal__first-line-container,
+  .modal__second-line-container {
+    font-size: 18px;
+  }
+}
+
 .modal__button-container {
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
-    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  cursor: pointer;
 }
 
 .modal__button {
@@ -56,6 +70,8 @@
   padding: 10px 40px;
   border-radius: 4px;
   color: #fff;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
 
 .modal__button:hover {
