Add Social Links

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -160,6 +160,10 @@
   margin-bottom: 40px;
 }
 
+.about__download-button {
+  margin-bottom: 40px;
+}
+
 .about__download-button-link {
   border: 0;
   background: #8752ff;
@@ -168,10 +172,41 @@
   border-radius: 4px;
   text-decoration: none;
   color: #fff;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
 
 .about__download-button-link:hover {
   background: #ffb82b;
+}
+
+.about__social-links-container {
+}
+
+.about__social-links-description-container {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.about__social-links-description {
+}
+
+.about__social-link-a {
+  color: #000;
+}
+
+.about__social-link-a:hover {
+  color: #ffc450;
+}
+
+.about__social-link {
+  font-size: 26px;
+  color: #000;
+}
+
+.about__social-links {
+  display: flex;
+  gap: 20px;
 }
 
 .about__triangle-container {
