--- a/src/components/About.css
+++ b/src/components/About.css
@@ -174,6 +174,7 @@
   color: #fff;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  transition: all 400ms ease;
 }
 
 .about__download-button-link:hover {
@@ -193,6 +194,7 @@
 
 .about__social-link-a {
   color: #000;
+  transition: all 400ms ease;
 }
 
 .about__social-link-a:hover {
