--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -6,10 +6,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 20px;
 }
 
 .portfolio__top {
-  flex: 0 1 200px;
+  flex: 0 1 160px;
   display: flex;
   align-items: center;
 }
@@ -34,7 +35,7 @@
 }
 
 .portfolio__container {
-  max-width: 1280px;
+  max-width: 900px;
   padding: 0 40px;
   width: 100%;
   flex: 1 1 auto;
