--- a/src/components/About.css
+++ b/src/components/About.css
@@ -23,7 +23,7 @@
 }
 
 .about__top-part {
-  flex: 0 1 120px;
+  flex: 0 1 140px;
   display: flex;
   align-items: center;
 }
@@ -68,11 +68,12 @@
   z-index: 5;
   max-width: 400px;
   min-width: 200px;
-  margin-top: 20px;
+  margin-top: 8rem;
 }
 
 @media screen and (max-width: 575px) {
   .about__image-container {
+    margin-top: 0;
     margin-bottom: 40px;
   }
 }
@@ -84,16 +85,19 @@
 }
 
 .about__text-container {
-  margin-left: 40px;
+  /* margin-left: 40px; */
   z-index: 2;
   background-color: rgba(255, 255, 255, 0.303);
   backdrop-filter: blur(5px);
   border-radius: 8px;
+  padding: 40px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
 }
 
 @media screen and (max-width: 575px) {
   .about__text-container {
     margin-left: 0;
+    padding: 4px;
   }
 }
 
@@ -191,6 +195,7 @@
 
 .about__download-button-link:hover {
   background: #ffb82b;
+  color: #8752ff;
 }
 
 .about__social-links-container {
