--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -8,6 +8,8 @@
 .navbar__container {
   margin: 0 auto;
   display: flex;
+  display: -webkit-flex;
+
   max-width: 1280px;
   padding: 0 40px;
   height: 100%;
@@ -36,6 +38,7 @@
   align-items: center;
   -webkit-align-items: center;
   justify-content: flex-end;
+  -webkit-justify-content: flex-end;
 }
 
 .navbar__menu {
