--- a/src/components/ProjectCard.css
+++ b/src/components/ProjectCard.css
@@ -125,7 +125,7 @@
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
   transition: all 400ms ease;
-  color: #ffb82b;
+  color: #fff;
 }
 
 .project-cars__link:hover {
