--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -7,7 +7,8 @@
 
 .navbar__container {
   margin: 0 auto;
-  display: flex;
+  display: grid;
+  column-gap: 80%;
   align-items: center;
   display: -webkit-flex;
   -webkit-align-items: center;
@@ -24,7 +25,7 @@
 }
 
 .navbar__logo-container {
-  display: flex;
+  display: grid;
   align-items: center;
 }
 
@@ -34,8 +35,8 @@
 }
 
 .navbar__menu-container {
-  flex: 1 1 auto;
-  display: flex;
+  /* flex: 1 1 auto; */
+  display: grid;
   display: -webkit-flex;
   align-items: center;
   -webkit-align-items: center;
