--- a/src/components/About.css
+++ b/src/components/About.css
@@ -90,7 +90,7 @@
   background-color: rgba(255, 255, 255, 0.303);
   backdrop-filter: blur(5px);
   border-radius: 8px;
-  padding: 40px;
+  padding: 40px 10px;
   box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
 }
 
