--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -7,13 +7,8 @@
 
 .navbar__container {
   margin: 0 auto;
-  display: grid;
-  column-gap: 80%;
-  align-items: center;
-  display: -webkit-flex;
-  -webkit-align-items: center;
-
-  max-width: 1280px;
+  display: flex;
+  max-width: 1260px;
   padding: 0 40px;
   height: 100%;
 }
@@ -25,7 +20,7 @@
 }
 
 .navbar__logo-container {
-  display: grid;
+  display: flex;
   align-items: center;
 }
 
@@ -35,13 +30,12 @@
 }
 
 .navbar__menu-container {
-  /* flex: 1 1 auto; */
-  display: grid;
+  flex: 1 0 auto;
+  display: flex;
   display: -webkit-flex;
   align-items: center;
   -webkit-align-items: center;
   justify-content: flex-end;
-  -webkit-justify-content: flex-end;
 }
 
 .navbar__menu {
