--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,10 +1,9 @@
 .navbar {
   flex: 0 1 80px;
-  background-color: #8752ff;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background-color: white;
+  /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
   z-index: 3;
 }
-
 .navbar__container {
   margin: 0 auto;
   display: flex;
@@ -54,15 +53,19 @@
 
 .navbar__menu-link {
   text-decoration: none;
-  color: #fff;
+  color: black;
+  font-size: 1.3rem;
   opacity: 0.5;
+  font-weight: 600;
 }
 
 .navbar__menu-link-active {
   text-decoration: none;
   position: relative;
-  color: #fff;
+  color: black;
   opacity: 1;
+  font-size: 1.3rem;
+
   font-weight: 600;
 }
 
