--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,6 +3,7 @@
   background-color: white;
   /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
   z-index: 3;
+  margin-bottom: 1rem;
 }
 .navbar__container {
   margin: 0 auto;
