--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -5,10 +5,10 @@
 .about__container {
   display: flex;
   justify-content: space-between;
-  margin: 0 auto 60px;
+  margin: 0 auto;
   position: relative;
-  max-width: 1280px;
-  padding: 0 40px;
+  max-width: 1260px;
+  padding: 0 28px;
   width: 100%;
   gap: 4rem;
 }
