--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -7,15 +7,15 @@
 }
 .navbar__container {
   margin: 0 auto;
-  display: flex;
+  display: grid;
   max-width: 1260px;
-  padding: 0 40px;
+  padding: 0 28px;
   height: 100%;
 }
 
-@media screen and (max-width: 575px) {
+@media screen and (max-width: 900px) {
   .navbar__container {
-    padding: 0 28px;
+    padding: 0 12px;
   }
 }
 
@@ -30,16 +30,16 @@
 }
 
 .navbar__menu-container {
-  flex: 1 0 auto;
-  display: flex;
-  display: -webkit-flex;
+  display: grid;
   align-items: center;
   -webkit-align-items: center;
-  justify-content: flex-end;
+  justify-content: end;
 }
 
 .navbar__menu {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  align-items: center;
   gap: 40px;
   list-style-type: none;
   margin: 0;
@@ -50,6 +50,11 @@
   .navbar__menu {
     gap: 20px;
   }
+}
+
+.navbar__menu-item {
+  width: fit-content;
+  margin: 22px 0;
 }
 
 .navbar__menu-link {
