--- a/src/components/Portfolio/ProjectStack.css
+++ b/src/components/Portfolio/ProjectStack.css
@@ -1,8 +1,14 @@
 .project-stack {
   background: #e1e9ef;
   animation: stack-load 1s ease;
+  padding: 2rem 1rem 2rem 2rem;
 }
 
+@media screen and (max-width: 1065px) {
+  .project-stack {
+    padding-left: 1rem;
+  }
+}
 @keyframes stack-load {
   0% {
     opacity: 0;
@@ -14,9 +20,10 @@
   }
 }
 
-.project-stack__container {
-  margin-top: 2rem;
-  margin-left: 2rem;
+@media screen and (max-width: 610px) {
+  .project-stack {
+    padding-left: 3rem;
+  }
 }
 
 h2 {
@@ -24,7 +31,7 @@ h2 {
   border-left: 0.5rem #ffb82b solid;
   width: fit-content;
   font-weight: 800;
-  font-size: 3rem;
+  font-size: 2rem;
   padding-left: 0.5rem;
 }
 
