--- a/src/components/Portfolio/ProjectDescription.css
+++ b/src/components/Portfolio/ProjectDescription.css
@@ -74,7 +74,6 @@
 .project-description__links {
   margin-top: 1rem;
   display: flex;
-  gap: 2rem;
 }
 
 .project-description__link {
@@ -83,4 +82,8 @@
   font-size: 1.5rem;
   display: block;
   border-bottom: 0.2rem #ffb82b solid;
+}
+
+.project-description__link:not(:last-child) {
+  margin-right: 2rem;
 }
