--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -1,9 +1,10 @@
 .modal__dark-background {
   position: absolute;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.6);
   width: 100%;
   height: 100%;
   z-index: 4;
+  top: 0;
 }
 
 .modal__modal-container {
@@ -11,11 +12,12 @@
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
+
   max-width: 500px;
-  width: 100%;
+  width: 94%;
   height: 260px;
   background-color: rgb(255, 255, 255);
-  border-radius: 8px;
+
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
     rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
   display: flex;
@@ -39,18 +41,16 @@
 }
 
 .modal__first-line-container {
-  margin-bottom: 20px;
+  margin-bottom: 1rem;
   font-size: 22px;
-  background-color: #8752ff;
-  color: #fff;
+  color: black;
   padding: 4px 8px;
 }
 
 .modal__second-line-container {
   margin-bottom: 45px;
   font-size: 22px;
-  background-color: #ffc450;
-  color: #8752ff;
+  color: black;
   padding: 4px 8px;
 }
 
@@ -66,14 +66,16 @@
 }
 
 .modal__button {
-  background-color: #02db38;
+  background: #ffcd6a;
+  color: black;
+  font-weight: 700;
   padding: 10px 40px;
-  border-radius: 4px;
-  color: #fff;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+
+  transition: all 0.6s ease;
 }
 
 .modal__button:hover {
-  background-color: #02e93c;
+  background: #ffb82b;
 }
