--- a/src/components/Portfolio/ProjectScreenshot.css
+++ b/src/components/Portfolio/ProjectScreenshot.css
@@ -50,6 +50,13 @@
 }
 
 .project-screenshot__inlay-text {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
+                                supported by Chrome, Edge, Opera and Firefox */
   flex: 1 1 350px;
 }
 
@@ -80,6 +87,13 @@
 .project-screenshot__inlay-pic {
   flex: 2 1 auto;
   padding-top: 6vh;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
+                                supported by Chrome, Edge, Opera and Firefox */
 }
 
 .project-screenshot__inlay-pic img {
