--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -5,7 +5,7 @@
 .about__container {
   display: flex;
   justify-content: space-between;
-  margin: 0 auto;
+  margin: 0 auto 2rem;
   position: relative;
   max-width: 1260px;
   padding: 0 28px;
