--- a/src/components/About/AboutInfo.css
+++ b/src/components/About/AboutInfo.css
@@ -1,7 +1,7 @@
-.about__text {
+/* .about__text {
   display: flex;
   justify-content: flex-end;
-}
+} */
 
 .about__text-container {
   z-index: 2;
@@ -9,7 +9,6 @@
   backdrop-filter: blur(5px);
   background: #f9f9f9;
   padding: 2rem;
-  margin-top: 3rem;
   animation: text-load 1s ease;
 }
 
@@ -56,7 +55,6 @@
   max-width: 600px;
   font-weight: 400;
   text-align: justify;
-  margin-bottom: 40px;
   font-size: 20px;
 }
 
