--- a/src/components/Contacts.css
+++ b/src/components/Contacts.css
@@ -11,11 +11,10 @@
   background-color: rgba(255, 255, 255, 0.4);
   backdrop-filter: blur(5px);
   padding: 40px;
-  margin-top: 8vh;
+  margin-top: 4vh;
   width: 100%;
   max-width: 500px;
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
-    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
 @media screen and (max-width: 520px) {
