--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -81,8 +81,7 @@
   color: black;
   font-weight: 700;
   padding: 10px 40px;
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
-    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 
   transition: all 0.6s ease;
 }
