--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,9 +1,8 @@
 .navbar {
   flex: 0 1 80px;
   background-color: white;
-  /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
   z-index: 3;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 .navbar__container {
   margin: 0 auto;
@@ -31,9 +30,26 @@
 
 .navbar__menu-container {
   display: grid;
+  grid-template-columns: 1fr auto;
   align-items: center;
   -webkit-align-items: center;
   justify-content: end;
+}
+
+.navbar__social-links {
+  display: grid;
+  grid-template-columns: 30px 30px;
+  gap: 1.5rem;
+}
+
+.navbar__social-link__a {
+  color: black;
+  font-size: 2rem;
+  transition: all 0.6s ease;
+}
+
+.navbar__social-link__a:hover {
+  color: #ffb82b;
 }
 
 .navbar__menu {
