--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -5,7 +5,7 @@
 .portfolio__container {
   flex: 1 0 auto;
   max-width: 1260px;
-  margin: 0 auto;
+  margin: 0 auto 2rem;
   padding: 0 28px;
   min-height: 80vh;
   width: 100%;
