--- a/src/components/About/AboutInfo.css
+++ b/src/components/About/AboutInfo.css
@@ -1,7 +1,7 @@
-/* .about__text {
+.about__text {
   display: flex;
   justify-content: flex-end;
-} */
+}
 
 .about__text-container {
   z-index: 2;
