--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,7 +3,15 @@
   background-color: white;
   z-index: 3;
   margin-bottom: 2rem;
+  position: relative;
 }
+
+@media screen and (max-width: 500px) {
+  .navbar {
+    margin-bottom: 0.5rem;
+  }
+}
+
 .navbar__container {
   margin: 0 auto;
   display: grid;
@@ -52,6 +60,16 @@
   color: #ffb82b;
 }
 
+@media screen and (max-width: 500px) {
+  .navbar__social-links {
+    gap: 2.5rem;
+  }
+
+  .navbar__social-link__a {
+    font-size: 2.5rem;
+  }
+}
+
 .navbar__menu {
   display: grid;
   grid-template-columns: repeat(3, auto);
@@ -68,12 +86,16 @@
     grid-template-columns: 1fr;
     background: white;
     top: 0;
-    right: -100%;
     padding: 6rem;
+    transition: all 0.8s ease;
   }
 
   .open {
     right: 0;
+  }
+  .closed {
+    right: -100%;
+    visibility: hidden;
   }
 }
 
